--- a/.tmp/public/src/app/about/index.tpl.html
+++ b/.tmp/public/src/app/about/index.tpl.html
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div id="section2">
-		<div class="container">
+		<div class="container" style="text-align:right">
 			<h4>direct your impact though input on policy</h4>
 			<h5>decision making influence in the power of your hands</h5>
 		</div>
@@ -28,7 +28,7 @@
 	    </div>
 	</div>
 	<div id="section4">
-		<div class="container">
+		<div class="container" style="text-align:right">
 			<img style="height:64px;" src="images/voetr_icon.png"/>
 			<h4>power to the people</h4>
 		</div>
