--- a/.tmp/public/src/app/search/index.tpl.html
+++ b/.tmp/public/src/app/search/index.tpl.html
@@ -74,7 +74,7 @@
 					<md-card ng-repeat="committee in committees" class="col-sm-12">
 						<md-card-title>
 							<md-card-title-text>
-								<h4><a href="/committee/{{committee.urlTitle}}"><span class="">{{committee.title}}</span></a></h4>
+								<h4><a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a></h4>
 							</md-card-title-text>
 						</md-card-title>
 					</md-card>
