--- a/assets/src/app/committee/templates/members.tpl.html
+++ b/assets/src/app/committee/templates/members.tpl.html
@@ -8,6 +8,7 @@
                 <h4 class="name"><a href="member/{{member.user.username}}">{{member.user.username}}</a></h4>
                 <p>{{member.title}}</p>
                 <p>{{member.user.state}}</p>
+                <!--{{member.constituentCount}}-->
             </div>
             <div class="social">
                 <a ng-show="member.user.socialAccounts.facebook.profileUrl" href="{{member.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook facebook-icon"></i></a>
