--- a/assets/src/app/home/templates/feed.tpl.html
+++ b/assets/src/app/home/templates/feed.tpl.html
@@ -10,15 +10,12 @@
                 </div>
                 <div class="info" style="height:200px">
                     <h4 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
-
                     <div class="spacing-10"></div>
-                    <h5>Bills - {{committees.length}}</h5>
-                    <h5>Committees - {{committees.length}}</h5>
-                    <h5>Constituents - {{constituents.length}}</h5>
-                    <h5>Representatives - {{representatives.length}}</h5>
-                    <h5>Votes - {{votes.length}}</h5>
+                    <h5><a href="member/{{user.username}}/committees">Committees - 0</a></h5>
+                    <h5><a href="member/{{user.username}}/constituents">Constituents - 0</a></h5>
+                    <h5><a href="member/{{user.username}}/representatives">Representatives - 0</a></h5>
+                    <h5><a href="member/{{user.username}}/votes">Votes - 0</a></h5>
                     <div class="spacing-25"></div>
-
                 </div>
                 <div class="social">
                     <a ng-show="user.socialAccounts.facebook.profileUrl" href="{{user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook facebook-icon"></i></a>
