--- a/assets/src/app/home/templates/feed.tpl.html
+++ b/assets/src/app/home/templates/feed.tpl.html
@@ -11,10 +11,10 @@
                 <div class="info" style="height:200px">
                     <h4 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
                     <div class="spacing-10"></div>
-                    <h5><a href="member/{{user.username}}/committees">Committees - 0</a></h5>
-                    <h5><a href="member/{{user.username}}/constituents">Constituents - 0</a></h5>
-                    <h5><a href="member/{{user.username}}/representatives">Representatives - 0</a></h5>
-                    <h5><a href="member/{{user.username}}/votes">Votes - 0</a></h5>
+                    <h5><a href="member/{{user.username}}/committees">Committees - {{user.committeeCount}}</a></h5>
+                    <h5><a href="member/{{user.username}}/constituents">Constituents - {{user.constituentCount}}</a></h5>
+                    <h5><a href="member/{{user.username}}/representatives">Representatives - {{user.representativeCount}}</a></h5>
+                    <h5><a href="member/{{user.username}}/votes">Votes - {{user.voteCount}}</a></h5>
                     <div class="spacing-25"></div>
                 </div>
                 <div class="social">
