--- a/assets/src/app/home/templates/feed.tpl.html
+++ b/assets/src/app/home/templates/feed.tpl.html
@@ -13,7 +13,7 @@
                     <div class="spacing-10"></div>
                     <h5><a href="member/{{user.username}}/committees">Committees - {{user.committeeCount}}</a></h5>
                     <h5><a href="member/{{user.username}}/constituents">Constituents - {{user.constituentCount}}</a></h5>
-                    <h5><a href="member/{{user.username}}/representatives">Representatives - {{user.representativeCount}}</a></h5>
+                    <!--<h5><a href="member/{{user.username}}/representatives">Representatives - {{user.representativeCount}}</a></h5>-->
                     <h5><a href="member/{{user.username}}/votes">Votes - {{user.voteCount}}</a></h5>
                     <div class="spacing-25"></div>
                 </div>
@@ -29,19 +29,6 @@
             
         </div>
         <div class="col-md-8">      
-            <!--
-            <div class="spacing-5"></div>
-            <div class="profilePost">
-                <form role="form">
-                    <md-input-container class="md-block">
-                        <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder="what's happening? engage!"></textarea>
-                    </md-input-container>
-                </form>
-                <button ng-click="createPost()" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
-            </div>
-            -->
-
-            <div class="spacing-10"></div>
 
             <md-card>
                 <div style="padding:16px 16px 16px">
