--- a/assets/src/app/bills/index.tpl.html
+++ b/assets/src/app/bills/index.tpl.html
@@ -32,10 +32,11 @@
         </md-card-title>
     </md-card>
 </div>
+<div class="spacing-25"></div>
 <md-divider></md-divider>
-<div class="spacing-10"></div>
-<div ng-click="loadMore()" style="text-align:center">
-    <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
+<div class="spacing-25"></div>
+<div ng-click="loadMore()" class="container" style="text-align:center">
+    <button style="width:100%" class="btn btn-default">MORE <i class="fa fa-angle-down"></i></button>
 </div>
-<div class="spacing-50"></div>
+<div class="spacing-25"></div>
 <div ng-include="'footer/index.tpl.html'"></div>
