--- a/assets/src/app/committees/index.tpl.html
+++ b/assets/src/app/committees/index.tpl.html
@@ -30,21 +30,18 @@
             <button ng-click="createCommittee()" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
         </form>
     </div>
-    <div class="committee-list-parent-container" id="committeeScrolling">
-        <div class="committee-list-container">
-            <div class="committee-container" ng-repeat="committee in committees">
-                <h2>
-                    <a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a>
-                </h2>
-                <p><span style="color:grey">{{committee.memberCount}} members</span></p>
-            </div>
+    <md-card ng-repeat="committee in committees">
+        <div class="card-container">
+            <h3><a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a></h3>
+            <p><span style="color:grey">{{committee.memberCount}} members</span></p>
         </div>
-    </div>
+    </md-card>
 </div>
+<div class="spacing-25"></div>
 <md-divider></md-divider>
-<div class="spacing-10"></div>
-<div ng-click="loadMore()" style="text-align:center">
-    <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
+<div class="spacing-25"></div>
+<div ng-click="loadMore()" class="container" style="text-align:center">
+    <button style="width:100%" class="btn btn-default">MORE <i class="fa fa-angle-down"></i></button>
 </div>
-<div class="spacing-50"></div>
+<div class="spacing-25"></div>
 <div ng-include="'footer/index.tpl.html'"></div>
