--- a/assets/src/app/footer/index.tpl.html
+++ b/assets/src/app/footer/index.tpl.html
@@ -8,6 +8,7 @@
 			<a href="/search">discover</a>
 			<a href="/bills">bills</a>
 			<a href="/committees">committees</a>
+			<!--<a href="/members">members</a>-->
 			<a href="/votes">votes</a>
 		</div>
 	</div>
