--- a/assets/src/app/home/templates/feed.tpl.html
+++ b/assets/src/app/home/templates/feed.tpl.html
@@ -41,12 +41,11 @@
                     <div style="margin-left:61px;">
                         <form role="form">
                             <md-input-container class="md-block">
-                                <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                                <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder="what's happening"></textarea>
                             </md-input-container>
                             <button ng-click="createPost()" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
                         </form>
                     </div>
-
                 </div>
             </md-card>
 
@@ -118,28 +117,20 @@
             <md-divider></md-divider>
             <div class="spacing-5"></div>
             <md-card ng-repeat="vote in votes">
-                <md-card-title>
-                    <md-card-title-text>
-                        <h4><a href="/vote/{{vote.id}}">{{vote.title}}</a></h4>
-                        <div class="margin-5"></div>
-                        <h4>
-                            <b>+ {{vote.plusCount-vote.minusCount}}</b>
-                            <button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)">
-                                <i class="fa fa-caret-up vBlue"></i> <b>{{vote.plusCount}}</b>
-                            </button>
-                            <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)">
-                                <i class="fa fa-caret-down red-color"></i>  <b>{{vote.minusCount}}</b>
-                            </button>
-                            <br><br>
-                            <span class="subtitle">({{vote.voteCount}} total votes)</span>
-                        </h4>
-                        <div class="margin-10"></div>
-                        <a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
-                        <br><br>
-                    </md-card-title-text>
-                </md-card-title>
+                <div style="padding:16px 16px 16px">
+                    <h4><a href="/vote/{{vote.id}}">{{vote.title}}</a></h4>
+                    <div class="spacing-10"></div>
+                    <a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
+                    <div class="spacing-10"></div>
+                    <button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, vote)">
+                        <i class="fa fa-caret-up vBlue"></i> <b>{{vote.plusCount}}</b>
+                    </button>
+                    <button ng-class="{'downVoted': class=='downVote'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)">
+                        <i class="fa fa-caret-down red-color"></i>  <b>{{vote.minusCount}}</b>
+                    </button>
+                </div>
             </md-card>
-            <br><br>
+            <div class="spacing-10"></div>
             <div ng-click="loadMoreVotes()" style="text-align:center">
                 <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
             </div>
