--- a/assets/src/app/member/templates/votes.tpl.html
+++ b/assets/src/app/member/templates/votes.tpl.html
@@ -8,7 +8,13 @@
 			</md-card-title-text>
 		</md-card-title>
 	</md-card>
-	<div class="spacing-10"></div>
-	<button ng-show="votes.length != voteCount" ng-click="loadMore()" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
-
+</div>
+<div class="spacing-25"></div>
+<div ng-show="votes.length != voteCount" >
+	<md-divider></md-divider>
+	<div class="spacing-25"></div>
+	<div ng-click="loadMore()" class="container" style="text-align:center">
+	    <button style="width:100%" class="btn btn-default">MORE <i class="fa fa-angle-down"></i></button>
+	</div>
+	<div class="spacing-25"></div>
 </div>
