--- a/assets/src/app/votes/index.tpl.html
+++ b/assets/src/app/votes/index.tpl.html
@@ -4,7 +4,7 @@
 		<h1 style="text-align:left">votes</h1>
 	</div>
 </div>
-<md-list class="container">
+<div class="container">
     <div class="spacing-10"></div>
 	<div class="dropdown sort-dropdown noselect">
 		<a class="dropdown-toggle noselect" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -19,22 +19,26 @@
 		</ul>
 	</div>
 	<div class="spacing-10"></div>
-	<md-list-item ng-repeat="vote in votes">
-		<div class="md-list-item-text" layout="column">
-			<h3 style="font-size:25px">
-				{{vote.plusCount - vote.minusCount}} ({{vote.voteCount}})
-      			<button class="btn btn-default" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
-      			<button class="btn btn-default" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
-				<a href="/vote/{{vote.id}}">{{vote.title}}</a>
-			</h3>
-			<h5><a href="/bill/{{vote.bill.id}}/{{vote.bill.urlTitle}}">{{vote.bill.title}}</a></h5>
+	<md-card ng-repeat="vote in votes">
+        <div style="padding:16px 16px 16px">
+			<h4><a href="/vote/{{vote.id}}">{{vote.title}}</a></h4>
+			<div class="spacing-10"></div>
+			<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
+			<div class="spacing-10"></div>
+			<button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, vote)">
+				<i class="fa fa-caret-up vBlue"></i> <b>{{vote.plusCount}}</b>
+			</button>
+			<button ng-class="{'downVoted': class=='downVote'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)">
+				<i class="fa fa-caret-down red-color"></i>  <b>{{vote.minusCount}}</b>
+			</button>
 		</div>
-	</md-list-item>
-</md-list>
-<md-divider></md-divider>
-<div class="spacing-10"></div>
-<div ng-click="loadMore()" style="text-align:center">
-	<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
+	</md-card>
 </div>
-<div class="spacing-50"></div>
+<div class="spacing-25"></div>
+<md-divider></md-divider>
+<div class="spacing-25"></div>
+<div ng-click="loadMore()" class="container" style="text-align:center">
+    <button style="width:100%" class="btn btn-default">MORE <i class="fa fa-angle-down"></i></button>
+</div>
+<div class="spacing-25"></div>
 <div ng-include="'footer/index.tpl.html'"></div>
