--- a/assets/src/app/committee/templates/activity.tpl.html
+++ b/assets/src/app/committee/templates/activity.tpl.html
@@ -2,7 +2,7 @@
     <div class="profilePost">
         <form role="form">
             <md-input-container class="md-block">
-                <textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
+                <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
             </md-input-container>
             <button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
         </form>
