--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -40,6 +40,8 @@
 						<p style="color:rgb(100,100,100)">{{bill.summary}}</p>
 					</div>
 					<div ng-bind-html="billContent"></div>
+					<h4 ng-show="!billContent">Bill Text not currently available</h4>
+					<h4 ng-show="bill.congressGovUrl"><a href="{{bill.congressGovUrl}}">congress.gov link</a></h4>
 				</div>
 		    </uib-tab>
 		    <uib-tab heading="Activity">
@@ -47,51 +49,91 @@
 		    	<div class="profilePost">
 					<form role="form">
 						<md-input-container class="md-block">
-							<textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
+							<textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
 						</md-input-container>
 						<button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
 					</form>
 		        </div>
 		        <md-card ng-repeat="post in posts">
-					<md-card-title>
-					<md-card-title-text>
-						<a href="member/{{post.user.username}}">
-							<img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
-							<p>{{post.user.username}}</p>
-						</a>
-						<p>{{post.post}}</p>
-					</md-card-title-text>
-					</md-card-title>
+		        	<div class="card-container">
+
+						<div class="post-controller-container">
+	                        <a href="/member/{{post.user.username}}">
+	                            <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+	                            <h4 class="post-name">{{post.user.username}}</h4>
+	                        </a>
+	                        <div class="pull-right">
+	                            <span class="grey" am-time-ago="post.updatedAt"></span>
+	                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
+	                        </div>
+	                    </div>
+
+	                    <div class="post-container">
+	                        <p>{{post.post}}</p>
+	                    </div>
+
+	                    <div class="post-action-container">
+	                        <div class="pull-left">
+	                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+	                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+	                            <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
+	                        </div>
+	                        <div class="pull-right">
+	                            <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
+	                        </div>
+	                    </div>
+
+					</div>
 		        </md-card>
 		    </uib-tab>
 			<uib-tab heading="Discussion">
 				<div class="profilePost">
 					<form role="form">
 						<md-input-container class="md-block">
-							<textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
-							<button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
+							<textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
 						</md-input-container>
+						<button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
 					</form>
 		        </div>
 		        <md-card ng-repeat="post in posts">
-		          <md-card-title>
-		            <md-card-title-text>
-			            <a href="member/{{post.user.username}}">
-			              <img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
-			              <h4>{{post.user.username}}</h4>
-			            </a>
-			            <p>{{post.post}}</p>
-		            </md-card-title-text>
-		          </md-card-title>
+
+			        <div class="card-container">
+				        <div class="post-controller-container">
+	                        <a href="/member/{{post.user.username}}">
+	                            <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+	                            <h4 class="post-name">{{post.user.username}}</h4>
+	                        </a>
+	                        <div class="pull-right">
+	                            <span class="grey" am-time-ago="post.updatedAt"></span>
+	                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
+	                        </div>
+	                    </div>
+
+	                    <div class="post-container">
+	                        <p>{{post.post}}</p>
+	                    </div>
+
+	                    <div class="post-action-container">
+	                        <div class="pull-left">
+	                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+	                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+	                            <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
+	                        </div>
+	                        <div class="pull-right">
+	                            <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
+	                        </div>
+	                    </div>
+                	</div>
+
 		        </md-card>
 		    </uib-tab>
 		    <uib-tab heading="Votes">
 	    		<div ng-show="currentUser">
 					<form role="form">
 						<md-input-container class="md-block">
-							<textarea ng-model="newVote.title" md-maxlength="150" rows="5" md-select-on-focus aria-label="newVote"></textarea>
-							<button type="submit" ng-click="" class="btn btn-default">Submit</button>
+							<textarea ng-model="newVote.title" rows="5" md-select-on-focus aria-label="newVote"></textarea>
 						</md-input-container>
+						<button type="submit" ng-click="" class="btn btn-default">Submit</button>
 					</form>
 				</div>
 			    <div class="voteContainer" ng-show="votes.length!=0">
